infra/web.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hue-auth
  namespace: default
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: hue-auth
spec:
  basicAuth:
    secret: hue-user
