infra/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hue
  labels:
    app.kubernetes.io/name: hue
    app.kubernetes.io/instance: hue
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    matchLabels:
      name: hue
  template:
    metadata:
      labels:
        name: hue
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: http
        prometheus.io/port: "1080"
    spec:
      containers:
        - name: hue
          image: vibioh/hue
          ports:
            - name: http
              containerPort: 1080
          readinessProbe:
            httpGet:
              path: /health
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            requests:
              memory: 24M
            limits:
              memory: 64M
