infra/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hue
spec:
  selector:
    name: hue
  ports:
    - name: http
      port: 80
      targetPort: http
