infra/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hue-whitelist
  labels:
    app.kubernetes.io/name: hue
    app.kubernetes.io/instance: hue
    app.kubernetes.io/managed-by: kubectl
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.1.0/24

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hue-local-http
  labels:
    app.kubernetes.io/name: hue
    app.kubernetes.io/instance: hue
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`alice.local`)
      kind: Rule
      middlewares:
        - name: hue-whitelist
      services:
        - name: hue
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hue-auth
  labels:
    app.kubernetes.io/name: hue
    app.kubernetes.io/instance: hue
    app.kubernetes.io/managed-by: kubectl
spec:
  basicAuth:
    secret: hue-auth
    removeHeader: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hue-http
  labels:
    app.kubernetes.io/name: hue
    app.kubernetes.io/instance: hue
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`hue.vibioh.fr`)
      kind: Rule
      middlewares:
        - name: redirect
      services:
        - name: hue
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hue-https
  labels:
    app.kubernetes.io/name: hue
    app.kubernetes.io/instance: hue
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`hue.vibioh.fr`)
      kind: Rule
      middlewares:
        - name: hue-auth
        - name: compress
        - name: ratelimit
      services:
        - name: hue
          port: 80
  tls:
    certResolver: default
